test/types/range/cast-assign-init/illegal-bug-3.good
illegal-bug-3.chpl:12: error: invalid copy-initialization
illegal-bug-3.chpl:12: error: initializing a range with idxType color from a range with idxType uint(64)
